--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^5.0.1",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
