--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.10.6",
     "sass": "^1.32.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
